--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,17 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+public/9781323984133_completed/9781323984133_original.png
+public/9781323984133_completed/9781323984133_adjusted.png
+public/9781323984133/9781323984133_original.png
+public/9781323984133/9781323984133_adjusted.png
+public/9781323984132_completed/9781323984132_original.png
+public/9781323984132_completed/9781323984132_adjusted.png
+public/9781323984132/9781323984132_original.png
+public/9781323984132/9781323984132_adjusted.png
+public/9781323984131_completed/9781323984131_original.png
+public/9781323984131_completed/9781323984131_adjusted.png
+public/9781323984131/9781323984131_original.png
+public/9781323984131/9781323984131_adjusted.png
+public/9781323984130_completed/9781323984130_original.png
+public/9781323984130_completed/9781323984130_adjusted.png
